# web_ai_agent

./: .env.example  .gitignore  .importlinter  README.md  app.py  pyproject.toml
adapters/agents/: browser_use_gateway.py
adapters/persistence/: sql_feedback_store.py  sql_learning_store.py  sql_message_store.py  sql_task_repo.py
adapters/web/: routes.py
application/use_cases/: clarification.py  compliance.py  feedback.py  followup.py  provide_credentials.py  recover_from_error.py  run_browser_job.py  steering.py  submit_task.py
domain/: compliance.py  entities.py  errors.py  handoff.py  learning.py  ports.py  recovery.py  steering.py  value_objects.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  styles.css
infrastructure/: compliance.py  config.py  container.py  credentials.py  db.py  env_sanitize.py  events.py  feedback.py  learning.py  server.py  steering_registry.py  throttle.py  web.py
infrastructure/browseruse/: agent_factory.py
infrastructure/llm/: factory.py
infrastructure/session/: stores.py
scripts/: dev_fake_server.py  gen_readme_diagram.py  gen_repo_map.py  hook_postedit.py  smoke_browseruse.py
tests/: fakes.py
tests/contract/: browser_agent_contract.py  test_browser_use_gateway_contract.py  test_fake_browser_agent.py
tests/e2e/: test_full_stack.py
tests/integration/: test_api.py  test_artifact_endpoint.py  test_browser_use_real.py  test_db_migration.py  test_event_broker.py  test_export_endpoint.py  test_message_db_api.py  test_sql_feedback_store.py  test_sql_task_repo.py  (+5 more)
(+32 files in other folders)
