[project]
name = "wagent"
version = "0.1.0"
requires-python = ">=3.11,<4.0"
dependencies = [
    "browser-use>=0.12.9",
    "fastapi>=0.136.3",
    "openpyxl>=3.1.5",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "import-linter>=2.11",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
